// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/Variables/EditVar edit variable (boolean) 1`] = `
Array [
  <div
    className="canvasVarHeader__triggerWrapper"
  >
    <button
      className="canvasVarHeader__button"
      onClick={[Function]}
      type="button"
    >
      <span
        className="canvasVarHeader__iconWrapper"
      >
        <span
          data-euiicon-type="sortLeft"
          style={
            Object {
              "verticalAlign": "top",
            }
          }
        >
          
        </span>
      </span>
      <span>
        <span
          className="canvasVarHeader__anchor"
        >
          Edit variable
        </span>
      </span>
    </button>
  </div>,
  <div
    className="canvasSidebar__accordionContent"
  >
    <div>
      <div
        className="euiCallOut euiCallOut--warning euiCallOut--small"
      >
        <div
          className="euiCallOutHeader"
        >
          <span
            aria-hidden="true"
            className="euiCallOutHeader__icon"
            color="inherit"
            data-euiicon-type="alert"
            size="m"
          >
            
          </span>
          <span
            className="euiCallOutHeader__title"
          >
            Editing a variable in use may adversely affect your workpad
          </span>
        </div>
      </div>
      <div
        className="euiSpacer euiSpacer--m"
      />
    </div>
    <form
      className="euiForm"
    >
      <div
        className="euiFormRow euiFormRow--hasLabel euiFormRow--compressed"
        id="generated-id-row"
      >
        <div
          className="euiFormRow__labelWrapper"
        >
          <label
            className="euiFormLabel euiFormRow__label"
            htmlFor="generated-id"
            id="generated-id-label"
          >
            Type
          </label>
        </div>
        <div
          className="euiFormRow__fieldWrapper"
        >
          <div
            className="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiSuperSelect"
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="euiPopover__anchor"
            />
          </div>
        </div>
      </div>
      <div
        className="euiFormRow euiFormRow--hasLabel euiFormRow--compressed"
        id="generated-id-row"
      >
        <div
          className="euiFormRow__labelWrapper"
        >
          <label
            aria-invalid={false}
            className="euiFormLabel euiFormRow__label"
            htmlFor="generated-id"
            id="generated-id-label"
          >
            Name
          </label>
        </div>
        <div
          className="euiFormRow__fieldWrapper"
        >
          <div
            className="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              className="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-invalid={false}
                className="euiFieldText euiFieldText--compressed"
                id="generated-id"
                name="name"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value="zenMode"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="euiFormRow euiFormRow--hasLabel euiFormRow--compressed"
        id="generated-id-row"
      >
        <div
          className="euiFormRow__labelWrapper"
        >
          <label
            className="euiFormLabel euiFormRow__label"
            htmlFor="generated-id"
            id="generated-id-label"
          >
            Value
          </label>
        </div>
        <div
          className="euiFormRow__fieldWrapper"
        >
          <fieldset
            className="euiButtonGroup euiButtonGroup--compressed euiButtonGroup--text euiButtonGroup--fullWidth"
            disabled={false}
          >
            <legend
              className="euiScreenReaderOnly"
            >
              Boolean value
            </legend>
            <div
              className="euiButtonGroup__buttons"
            >
              <label
                className="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small euiButtonGroupButton-isSelected"
                disabled={false}
                htmlFor="generated-id"
                style={
                  Object {
                    "minWidth": undefined,
                  }
                }
              >
                <span
                  className="euiButtonContent euiButton__content"
                >
                  <span
                    className="euiButton__text euiButtonGroupButton__textShift"
                  >
                    <input
                      checked={true}
                      className="euiScreenReaderOnly"
                      data-test-subj="generated-id-true"
                      disabled={false}
                      id="generated-id"
                      name="value"
                      onChange={[Function]}
                      type="radio"
                    />
                    True
                  </span>
                </span>
              </label>
              <label
                className="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small"
                disabled={false}
                htmlFor="generated-id"
                style={
                  Object {
                    "minWidth": undefined,
                  }
                }
              >
                <span
                  className="euiButtonContent euiButton__content"
                >
                  <span
                    className="euiButton__text euiButtonGroupButton__textShift"
                  >
                    <input
                      checked={false}
                      className="euiScreenReaderOnly"
                      data-test-subj="generated-id-false"
                      disabled={false}
                      id="generated-id"
                      name="value"
                      onChange={[Function]}
                      type="radio"
                    />
                    False
                  </span>
                </span>
              </label>
            </div>
          </fieldset>
        </div>
      </div>
      <div
        className="euiSpacer euiSpacer--m"
      />
      <div
        className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <button
            className="euiButton euiButton--success euiButton--small euiButton--fill"
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "minWidth": undefined,
              }
            }
            type="button"
          >
            <span
              className="euiButtonContent euiButton__content"
            >
              <span
                className="euiButtonContent__icon"
                color="inherit"
                data-euiicon-type="save"
                size="m"
              >
                
              </span>
              <span
                className="euiButton__text"
              >
                Save changes
              </span>
            </span>
          </button>
        </div>
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <button
            className="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--small"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="euiButtonContent euiButtonEmpty__content"
            >
              <span
                className="euiButtonEmpty__text"
              >
                Cancel
              </span>
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>,
]
`;

exports[`Storyshots components/Variables/EditVar edit variable (number) 1`] = `
Array [
  <div
    className="canvasVarHeader__triggerWrapper"
  >
    <button
      className="canvasVarHeader__button"
      onClick={[Function]}
      type="button"
    >
      <span
        className="canvasVarHeader__iconWrapper"
      >
        <span
          data-euiicon-type="sortLeft"
          style={
            Object {
              "verticalAlign": "top",
            }
          }
        >
          
        </span>
      </span>
      <span>
        <span
          className="canvasVarHeader__anchor"
        >
          Edit variable
        </span>
      </span>
    </button>
  </div>,
  <div
    className="canvasSidebar__accordionContent"
  >
    <div>
      <div
        className="euiCallOut euiCallOut--warning euiCallOut--small"
      >
        <div
          className="euiCallOutHeader"
        >
          <span
            aria-hidden="true"
            className="euiCallOutHeader__icon"
            color="inherit"
            data-euiicon-type="alert"
            size="m"
          >
            
          </span>
          <span
            className="euiCallOutHeader__title"
          >
            Editing a variable in use may adversely affect your workpad
          </span>
        </div>
      </div>
      <div
        className="euiSpacer euiSpacer--m"
      />
    </div>
    <form
      className="euiForm"
    >
      <div
        className="euiFormRow euiFormRow--hasLabel euiFormRow--compressed"
        id="generated-id-row"
      >
        <div
          className="euiFormRow__labelWrapper"
        >
          <label
            className="euiFormLabel euiFormRow__label"
            htmlFor="generated-id"
            id="generated-id-label"
          >
            Type
          </label>
        </div>
        <div
          className="euiFormRow__fieldWrapper"
        >
          <div
            className="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiSuperSelect"
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="euiPopover__anchor"
            />
          </div>
        </div>
      </div>
      <div
        className="euiFormRow euiFormRow--hasLabel euiFormRow--compressed"
        id="generated-id-row"
      >
        <div
          className="euiFormRow__labelWrapper"
        >
          <label
            aria-invalid={false}
            className="euiFormLabel euiFormRow__label"
            htmlFor="generated-id"
            id="generated-id-label"
          >
            Name
          </label>
        </div>
        <div
          className="euiFormRow__fieldWrapper"
        >
          <div
            className="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              className="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-invalid={false}
                className="euiFieldText euiFieldText--compressed"
                id="generated-id"
                name="name"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value="bigNumber"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="euiFormRow euiFormRow--hasLabel euiFormRow--compressed"
        id="generated-id-row"
      >
        <div
          className="euiFormRow__labelWrapper"
        >
          <label
            className="euiFormLabel euiFormRow__label"
            htmlFor="generated-id"
            id="generated-id-label"
          >
            Value
          </label>
        </div>
        <div
          className="euiFormRow__fieldWrapper"
        >
          <div
            className="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              className="euiFormControlLayout__childrenWrapper"
            >
              <input
                className="euiFieldNumber euiFieldNumber--compressed"
                name="value"
                onChange={[Function]}
                type="number"
                value={1000}
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="euiSpacer euiSpacer--m"
      />
      <div
        className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <button
            className="euiButton euiButton--success euiButton--small euiButton--fill"
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "minWidth": undefined,
              }
            }
            type="button"
          >
            <span
              className="euiButtonContent euiButton__content"
            >
              <span
                className="euiButtonContent__icon"
                color="inherit"
                data-euiicon-type="save"
                size="m"
              >
                
              </span>
              <span
                className="euiButton__text"
              >
                Save changes
              </span>
            </span>
          </button>
        </div>
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <button
            className="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--small"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="euiButtonContent euiButtonEmpty__content"
            >
              <span
                className="euiButtonEmpty__text"
              >
                Cancel
              </span>
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>,
]
`;

exports[`Storyshots components/Variables/EditVar edit variable (string) 1`] = `
Array [
  <div
    className="canvasVarHeader__triggerWrapper"
  >
    <button
      className="canvasVarHeader__button"
      onClick={[Function]}
      type="button"
    >
      <span
        className="canvasVarHeader__iconWrapper"
      >
        <span
          data-euiicon-type="sortLeft"
          style={
            Object {
              "verticalAlign": "top",
            }
          }
        >
          
        </span>
      </span>
      <span>
        <span
          className="canvasVarHeader__anchor"
        >
          Edit variable
        </span>
      </span>
    </button>
  </div>,
  <div
    className="canvasSidebar__accordionContent"
  >
    <div>
      <div
        className="euiCallOut euiCallOut--warning euiCallOut--small"
      >
        <div
          className="euiCallOutHeader"
        >
          <span
            aria-hidden="true"
            className="euiCallOutHeader__icon"
            color="inherit"
            data-euiicon-type="alert"
            size="m"
          >
            
          </span>
          <span
            className="euiCallOutHeader__title"
          >
            Editing a variable in use may adversely affect your workpad
          </span>
        </div>
      </div>
      <div
        className="euiSpacer euiSpacer--m"
      />
    </div>
    <form
      className="euiForm"
    >
      <div
        className="euiFormRow euiFormRow--hasLabel euiFormRow--compressed"
        id="generated-id-row"
      >
        <div
          className="euiFormRow__labelWrapper"
        >
          <label
            className="euiFormLabel euiFormRow__label"
            htmlFor="generated-id"
            id="generated-id-label"
          >
            Type
          </label>
        </div>
        <div
          className="euiFormRow__fieldWrapper"
        >
          <div
            className="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiSuperSelect"
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="euiPopover__anchor"
            />
          </div>
        </div>
      </div>
      <div
        className="euiFormRow euiFormRow--hasLabel euiFormRow--compressed"
        id="generated-id-row"
      >
        <div
          className="euiFormRow__labelWrapper"
        >
          <label
            aria-invalid={false}
            className="euiFormLabel euiFormRow__label"
            htmlFor="generated-id"
            id="generated-id-label"
          >
            Name
          </label>
        </div>
        <div
          className="euiFormRow__fieldWrapper"
        >
          <div
            className="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              className="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-invalid={false}
                className="euiFieldText euiFieldText--compressed"
                id="generated-id"
                name="name"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value="homeUrl"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="euiFormRow euiFormRow--hasLabel euiFormRow--compressed"
        id="generated-id-row"
      >
        <div
          className="euiFormRow__labelWrapper"
        >
          <label
            className="euiFormLabel euiFormRow__label"
            htmlFor="generated-id"
            id="generated-id-label"
          >
            Value
          </label>
        </div>
        <div
          className="euiFormRow__fieldWrapper"
        >
          <div
            className="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              className="euiFormControlLayout__childrenWrapper"
            >
              <input
                className="euiFieldText euiFieldText--compressed"
                name="value"
                onChange={[Function]}
                type="text"
                value="https://elastic.co"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="euiSpacer euiSpacer--m"
      />
      <div
        className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <button
            className="euiButton euiButton--success euiButton--small euiButton--fill"
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "minWidth": undefined,
              }
            }
            type="button"
          >
            <span
              className="euiButtonContent euiButton__content"
            >
              <span
                className="euiButtonContent__icon"
                color="inherit"
                data-euiicon-type="save"
                size="m"
              >
                
              </span>
              <span
                className="euiButton__text"
              >
                Save changes
              </span>
            </span>
          </button>
        </div>
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <button
            className="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--small"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="euiButtonContent euiButtonEmpty__content"
            >
              <span
                className="euiButtonEmpty__text"
              >
                Cancel
              </span>
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>,
]
`;

exports[`Storyshots components/Variables/EditVar new variable 1`] = `
Array [
  <div
    className="canvasVarHeader__triggerWrapper"
  >
    <button
      className="canvasVarHeader__button"
      onClick={[Function]}
      type="button"
    >
      <span
        className="canvasVarHeader__iconWrapper"
      >
        <span
          data-euiicon-type="sortLeft"
          style={
            Object {
              "verticalAlign": "top",
            }
          }
        >
          
        </span>
      </span>
      <span>
        <span
          className="canvasVarHeader__anchor"
        >
          Add variable
        </span>
      </span>
    </button>
  </div>,
  <div
    className="canvasSidebar__accordionContent"
  >
    <form
      className="euiForm"
    >
      <div
        className="euiFormRow euiFormRow--hasLabel euiFormRow--compressed"
        id="generated-id-row"
      >
        <div
          className="euiFormRow__labelWrapper"
        >
          <label
            className="euiFormLabel euiFormRow__label"
            htmlFor="generated-id"
            id="generated-id-label"
          >
            Type
          </label>
        </div>
        <div
          className="euiFormRow__fieldWrapper"
        >
          <div
            className="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiSuperSelect"
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="euiPopover__anchor"
            />
          </div>
        </div>
      </div>
      <div
        className="euiFormRow euiFormRow--hasLabel euiFormRow--compressed"
        id="generated-id-row"
      >
        <div
          className="euiFormRow__labelWrapper"
        >
          <label
            aria-invalid={false}
            className="euiFormLabel euiFormRow__label"
            htmlFor="generated-id"
            id="generated-id-label"
          >
            Name
          </label>
        </div>
        <div
          className="euiFormRow__fieldWrapper"
        >
          <div
            className="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              className="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-invalid={false}
                className="euiFieldText euiFieldText--compressed"
                id="generated-id"
                name="name"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="euiFormRow euiFormRow--hasLabel euiFormRow--compressed"
        id="generated-id-row"
      >
        <div
          className="euiFormRow__labelWrapper"
        >
          <label
            className="euiFormLabel euiFormRow__label"
            htmlFor="generated-id"
            id="generated-id-label"
          >
            Value
          </label>
        </div>
        <div
          className="euiFormRow__fieldWrapper"
        >
          <div
            className="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              className="euiFormControlLayout__childrenWrapper"
            >
              <input
                className="euiFieldText euiFieldText--compressed"
                name="value"
                onChange={[Function]}
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="euiSpacer euiSpacer--m"
      />
      <div
        className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <button
            className="euiButton euiButton--success euiButton--small euiButton--fill euiButton-isDisabled"
            disabled={true}
            onClick={[Function]}
            style={
              Object {
                "minWidth": undefined,
              }
            }
            type="button"
          >
            <span
              className="euiButtonContent euiButton__content"
            >
              <span
                className="euiButtonContent__icon"
                color="inherit"
                data-euiicon-type="save"
                size="m"
              >
                
              </span>
              <span
                className="euiButton__text"
              >
                Save changes
              </span>
            </span>
          </button>
        </div>
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <button
            className="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--small"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="euiButtonContent euiButtonEmpty__content"
            >
              <span
                className="euiButtonEmpty__text"
              >
                Cancel
              </span>
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>,
]
`;
